# aim-traiding-dev

./: README.md
aim-trading-dev/: .gitignore  Cargo.toml  README.md  build.rs  todo.txt  vci-test.txt
aim-trading-dev/.cargo/: config.toml
aim-trading-dev/aim_chart/: Cargo.toml
aim-trading-dev/aim_chart/src/: cache.rs  chart.rs  company_info.rs  draw.rs  lib.rs  mini_chart.rs
aim-trading-dev/aim_data/: Cargo.toml
aim-trading-dev/aim_data/src/: btc.rs  lib.rs
aim-trading-dev/aim_data/src/explorer/: mod.rs
aim-trading-dev/aim_data/src/explorer/aim/: api.rs  mod.rs
aim-trading-dev/aim_data/src/explorer/vci/: company_info.rs  mod.rs
aim-trading-dev/aim_data/src/explorer/vci/tests/: market_watch_test.rs
aim-trading-dev/docs/: API-doc-Corporate-profile.md
aim-trading-dev/src/: main.rs  task_manager.rs
aim-trading-dev/src/tasks/: cache_storage.rs  mod.rs  task_manager.rs  world_index.rs
aim-trading-dev/src/tasks/backend/: finance_list.rs  mod.rs
aim-trading-dev/src/tasks/chart/: chart_update.rs  company_profile.rs  data_update.rs  finance_report.rs  finance_sheet.rs  mod.rs  stock_update.rs  ui_chart.rs
aim-trading-dev/src/tasks/dashboard/: abnormal_trade.rs  heat_map.rs  icb_index.rs  mod.rs  overall_index.rs  sjc_price.rs  stock_influence.rs  trading_volume.rs  vn_index_data.rs
aim-trading-dev/src/tasks/market_watch/: mini_chart.rs  mod.rs
aim-trading-dev/test/dashboard/: Cargo.toml  build.rs
aim-trading-dev/test/dashboard/src/: main.rs
aim-trading-dev/test/dashboard/src/tasks/: mod.rs
aim-trading-dev/test/dashboard/src/tasks/dashboard/: abnormal_trade.rs  heat_map.rs  icb_index.rs  mod.rs  overall_index.rs  sjc_price.rs  stock_influence.rs  trading_volume.rs
aim-trading-dev/test/market_watch/: Cargo.toml  build.rs
aim-trading-dev/test/market_watch/src/: main.rs
aim-trading-dev/test/market_watch/src/aim_chart/: mini_chart.rs  mod.rs
aim-trading-dev/test/market_watch/src/aim_data/: mod.rs
aim-trading-dev/test/market_watch/src/aim_data/explorer/: mod.rs
aim-trading-dev/test/market_watch/src/aim_data/explorer/aim/: mod.rs
aim-trading-dev/test/market_watch/src/aim_data/explorer/vci/: market_watch.rs  mod.rs  ohlc.rs  order_data.rs
aim-trading-dev/test/market_watch/src/tasks/: mod.rs
aim-trading-dev/test/market_watch/src/tasks/chart/: data_update.rs  mod.rs
aim-trading-dev/test/market_watch/src/tasks/market_watch/: mini_chart.rs
aim-trading-dev/ui/: app.slint  data_type.slint  page_selection.slint
aim-trading-dev/ui/pages/chart/: chart.slint  chart_page.slint  company_profile.slint  finance.slint  finance_report.slint  finance_type.slint  quantitative.slint  sentiment.slint  stock_card.slint  ticker_list.slint
aim-trading-dev/ui/pages/dashboard/: ICB_index.slint  Influence_table.slint  abnormal_trade.slint  dashboard.slint  goods_price.slint  heatmap.slint  overall_index.slint  trading_volume.slint
aim-trading-dev/ui/pages/market_watch/: market_watch.slint
aim-trading-dev/ui/pages/quantitative/: quantitative_layout.slint  quantitative_return_matrix.slint
aim-trading-dev/ui/pages/sentiment/: iot_dashboard.slint  sentiment_chart.slint  sentiment_component.slint  sentiment_layout.slint
aim-trading-dev/ui/widgets/: aim_widget.slint  demo_orbiter.slint  func_icon.slint  orbiter.slint
