[package]
name = "aim-data"
version = "0.1.0"
edition = "2024"
authors = ["tuemb <nvtu96@gmail.com>"]
description   = "AIM data handling library"

[dependencies]
chrono = { version = "0.4.40", features = ["serde"] }
reqwest = { version = "0.12.5", features = ["blocking", "json"] }
tokio = { version = "1.36", features = ["full"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
anyhow = "1"